Repair Swagger
